--- a/StoryTime-Frontend/package.json
+++ b/StoryTime-Frontend/package.json
@@ -14,13 +14,17 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^4.22.0",
     "@tiptap/extension-bold": "^2.11.5",
     "@tiptap/extension-heading": "^2.11.5",
+    "@tiptap/extension-highlight": "^2.23.0",
     "@tiptap/extension-italic": "^2.11.5",
     "@tiptap/extension-paragraph": "^2.11.5",
-    "@tiptap/extension-underline": "^2.11.5",
-    "@tiptap/react": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.23.0",
+    "@tiptap/extension-underline": "^2.23.0",
+    "@tiptap/react": "^2.23.0",
+    "@tiptap/starter-kit": "^2.23.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
