--- a/StoryTime-Frontend/package.json
+++ b/StoryTime-Frontend/package.json
@@ -25,6 +25,7 @@
     "@tiptap/extension-underline": "^2.23.0",
     "@tiptap/react": "^2.23.0",
     "@tiptap/starter-kit": "^2.23.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
