--- a/StoryTime-Frontend/package.json
+++ b/StoryTime-Frontend/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
     "lucide-react": "^0.477.0",
     "mini-css-extract-plugin": "^2.9.2",
