--- a/story_backend/package.json
+++ b/story_backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
     "openai": "^4.86.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
