--- a/StoryTime-Frontend/package.json
+++ b/StoryTime-Frontend/package.json
@@ -10,6 +10,8 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.2",
@@ -32,10 +34,12 @@
     "cookies-next": "^5.1.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
+    "google-auth-library": "^10.2.0",
     "lucide-react": "^0.477.0",
     "mini-css-extract-plugin": "^2.9.2",
     "multer": "^2.0.0",
     "next": "15.2.1",
+    "next-auth": "^4.24.11",
     "next-connect": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -45,7 +49,7 @@
     "react-simple-typewriter": "^5.0.1",
     "sonner": "^2.0.5",
     "swiper": "^11.2.5",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
